# Traffic-monitoring-web

./: .gitignore  COMPREHENSIVE_CHECK_REPORT.md  DEPLOYMENT_GUIDE.md  FINAL_CHECK_SUMMARY.txt  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_LLM_LOGGING.md  KAFKA_CONFIG_FIX.md  KAFKA_INTEGRATION_GUIDE.md  LLM_FLOW_DEBUG_GUIDE.md  LLM_FLOW_FIX_REPORT.md  LOGGER_FORMAT_FIX.md  LOGIC_CONFUSION_ANALYSIS.md  ONE_KEY_STARTUP_GUIDE.md  PROMETHEUS_METRICS_FIX.md  PROMETHEUS_NO_DATA_FIX.md  PROMETHEUS_QUICKREF.md  README.md  REDIS_ROLE_EXPLANATION.md  RISK_NONE_TROUBLESHOOTING.md  STREAMING_ARCHITECTURE_ANALYSIS.md  STREAMING_ARCHITECTURE_COMPARISON.md  STREAMING_OPTIMIZATION.md  UPDATE_SUMMARY.md  WINDOWS_KAFKA_GUIDE.md  app.py  config.py  hello_qwen.py  main.py  model_config.yaml  pyproject.toml  requirements-streaming.txt  requirements.txt  test_endpoints.py  test_qwen_vl_plus.py  test_stream_detection.py  并发需求1.1.md
config/: api_keys.yaml  kafka.yaml  monitoring.yaml
deployment/: docker-compose.infra.yml  grafana-datasources.yml  prometheus.yml
docs/: ARCHITECTURE_DESIGN.md  IMPLEMENTATION_GUIDE.md  LLM_RISK_DETECTION_GUIDE.md  QUICK_REFERENCE.md  QUICK_START_LLM_DEBUG.md  快速开始指南.md  架构优化实施方案.md  问题解决方案_前端风险显示none.md  项目总结.md
legacy_docs/: ALL_FIXES_SUMMARY.md  FIX_REPORT_2025_10_20.md  KAFKA_CONFIG_FIX.md  KAFKA_INIT_ERROR_FIX.md  LOGURU_FORMAT_FIX.md  PORT_CHANGE_NOTICE.md  PROMETHEUS_METRICS_UPDATE_FIX.md  QUICK_FIX_SUMMARY.md  UNBOUND_VARIABLE_FIX.md
routes/: health.py  ws.py
scripts/: check_redis_keys.sh  debug_llm_flow.py  show_fix_summary.sh  (+21 more)
(+31 files in other folders)
