[project]
name = "traffic-monitoring-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "confluent-kafka>=2.3.0",
    "dashscope>=1.24.6",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-sock>=0.7.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "openai>=1.109.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "prometheus-client>=0.19.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "ultralytics>=8.3.203",
    "uvicorn>=0.37.0",
    "websocket-client>=1.8.0",
]
